--- a/my_modules/index.html
+++ b/my_modules/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+	<script src="classes/LivingCreature.js"></script>
 	<script src="classes/Poizon.js"></script>
 	<script src="classes/hanter.js"></script>
 	<script src="classes/Grass.js"></script>
