--- a/my_modules/index.html
+++ b/my_modules/index.html
@@ -8,11 +8,11 @@
 
 <body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-	<script src="classes/LivingCreature.js"></script>
-	<script src="classes/Poizon.js"></script>
-	<script src="classes/hanter.js"></script>
-	<script src="classes/Grass.js"></script>
-	<script src="classes/GrassEater.js"></script>
+	<script src="LivingCreature.js"></script>
+	<script src="Poizon.js"></script>
+	<script src="hanter.js"></script>
+	<script src="Grass.js"></script>
+	<script src="GrassEater.js"></script>
 	<script src="script.js"></script>
 </body>
 
